--- a/game/index.html
+++ b/game/index.html
@@ -15,13 +15,28 @@
         justify-content: center;
         align-items: center;
         text-align: center;
+        font-size: 16px;
+        font-family: serif;
+      }
+      #action {
+          background-color: white;
+          color: black;
+          font-size: 16px;
+          font-family: serif;
+          border: 1px solid black;
+          margin-bottom: 5px;
+          padding: 5px 10px;
+      }
+      button:hover {
+          cursor: pointer;
+          text-decoration: underline;
       }
     </style>
   </head>
   <body>
     <div id="main">
       <p id="situation">Situation text!</p>
-      <p id="progress">Progress text!</p>
+      <p id="progress" style="font-style:italic;margin-top:0;">Progress text!</p>
       <button id="action" onclick="update()">Action button!</button>
     </div>
 
